--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "twilio": "^3.48.2"
   }
 }
