--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "twilio-video": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
