--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
     "react": "^16.13.1",
+    "react-add-to-calendar": "^0.1.5",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
