--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-add-to-calendar": "^0.1.5",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
