--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
+    "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-add-to-calendar": "^0.1.5",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
