--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
     "express-pino-logger": "^5.0.0",
+    "express-rate-limit": "^5.1.3",
     "express-validator": "^6.6.1",
+    "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.4",
     "twilio": "^3.48.2",
-    "web-push": "^3.4.4"
+    "web-push": "^3.4.4",
+    "xss-clean": "^0.1.1"
   }
 }
