--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-add-to-calendar": "^0.1.5",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-typeahead": "^5.1.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-tiny-virtual-list": "^2.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
